# OmniBot

./: .env.example  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  TESTING_GUIDE.md  deploy.py  deployment.env.example  docker-compose.yml  launch_mobile_manipulation.sh  launch_rosbridge.sh  launch_sim_pc.sh  launch_simulation.sh  launch_teleop.sh  network.env  urdf_viewer.html
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  research_benchmark.yml
.github/workflows/: bloom-release.yml  publish-pypi.yml  ros2_ci.yml
android_app/: README.md  build.gradle.kts
android_app/app/: build.gradle.kts
data_engine/: README.md  TRAINING_GUIDE.md  requirements.txt  setup.py
data_engine/ingestion/: bag_to_lerobot.py  bag_to_omnibot.py
data_engine/isaac_sim/: collect_episodes.py  randomization_config.yaml
data_engine/loader/: dataset.py
data_engine/schema/: constants.py
data_engine/scripts/: ingest_dataset.py  validate_dataset.py
data_engine/visualization/: visualize_episode.py
digital_twin/: README.md
digital_twin/configs/: nav2_sim_params.yaml
digital_twin/configs/foxglove/: omnibot_layout.json
digital_twin/configs/rviz/: manipulation.rviz  navigation.rviz  perception.rviz
digital_twin/docker/: Dockerfile.sim  docker-compose.gpu.yml  docker-compose.yml  post_create.sh
digital_twin/scenarios/: nav_corridor.yaml  pick_and_place.yaml
digital_twin/scripts/: build_usd.sh  setup_omnigraph.py
digital_twin/worlds/: omnibot_lab.sdf
infra/docker/: Dockerfile.vla
lerobot_engine/: infer.py  record.py  requirements.txt  train.py
lerobot_engine/configs/: smolvla_mobile_manip.yaml
rl_engine/: __init__.py  requirements.txt
rl_engine/config/: arm_train.yaml  domain_randomization.yaml  nav_train.yaml
rl_engine/envs/: __init__.py  omnibot_arm_env.py  omnibot_nav_env.py
rl_engine/export/: __init__.py  export_policy.py
rl_engine/scripts/: train_arm.py  train_nav.py
rl_engine/tasks/: __init__.py
rl_engine/tasks/mdp/: __init__.py  actions.py  observations.py  rewards.py  terminations.py
robot_ws/src/omnibot_arm/: CMakeLists.txt  package.xml
robot_ws/src/omnibot_arm/config/: arm_params.yaml
robot_ws/src/omnibot_arm/launch/: arm.launch.py
robot_ws/src/omnibot_arm/scripts/: arm_driver_node.py
robot_ws/src/omnibot_bringup/: CMakeLists.txt  package.xml
robot_ws/src/omnibot_bringup/config/: isaac_ros_bridge.yaml  omnibot.rviz  ros_gz_bridge.yaml  xbox_teleop.yaml
robot_ws/src/omnibot_bringup/launch/: isaac_sim.launch.py  mobile_manipulation.launch.py  robot.launch.py  sim_pc.launch.py  simulation.launch.py
robot_ws/src/omnibot_bringup/worlds/: omnibot_world.sdf
robot_ws/src/omnibot_description/urdf/: omnibot.urdf.xacro
robot_ws/src/omnibot_description/usd/: README.md
robot_ws/src/omnibot_driver/scripts/: serial_bridge_node.py  yahboom_controller_node.py
robot_ws/src/omnibot_driver/test/: conftest.py  test_yahboom_protocol.py
robot_ws/src/omnibot_hybrid/: package.xml  setup.py
robot_ws/src/omnibot_hybrid/config/: named_locations.yaml
robot_ws/src/omnibot_hybrid/launch/: hybrid_robot.launch.py
robot_ws/src/omnibot_hybrid/omnibot_hybrid/: cmd_vel_mux.py  mission_planner.py
robot_ws/src/omnibot_hybrid/test/: test_cmd_vel_mux.py  test_mission_planner_parser.py
robot_ws/src/omnibot_langchain/: package.xml  requirements.txt  setup.cfg  setup.py
robot_ws/src/omnibot_langchain/config/: langchain_agent.yaml
robot_ws/src/omnibot_langchain/launch/: langchain_agent.launch.py
robot_ws/src/omnibot_langchain/omnibot_langchain/: langchain_agent_node.py
robot_ws/src/omnibot_langchain/omnibot_langchain/agent/: prompt.py  react_agent.py
robot_ws/src/omnibot_langchain/omnibot_langchain/memory/: entity_memory.py
robot_ws/src/omnibot_langchain/omnibot_langchain/tools/: human_tools.py  navigation_tools.py  query_tools.py  status_tools.py  vla_tools.py
robot_ws/src/omnibot_langchain/omnibot_langchain/vision/: scene_describer.py
robot_ws/src/omnibot_langchain/test/: test_entity_memory.py  test_tools.py
robot_ws/src/omnibot_lerobot/: package.xml  setup.py
robot_ws/src/omnibot_lerobot/config/: smolvla_params.yaml
robot_ws/src/omnibot_lerobot/launch/: smolvla_inference.launch.py  teleop_record.launch.py
robot_ws/src/omnibot_lerobot/omnibot_lerobot/: bev_stitcher_node.py  smolvla_node.py  teleop_recorder_node.py
robot_ws/src/omnibot_navigation/: package.xml
robot_ws/src/omnibot_navigation/config/: nav2_params.yaml  octomap_params.yaml  rtabmap_params.yaml
robot_ws/src/omnibot_navigation/launch/: autonomous_robot.launch.py  rtabmap.launch.py
robot_ws/src/omnibot_orchestration/: package.xml  requirements.txt  setup.cfg  setup.py
robot_ws/src/omnibot_orchestration/config/: langchain_agent.yaml
robot_ws/src/omnibot_orchestration/launch/: langchain_agent.launch.py
robot_ws/src/omnibot_orchestration/omnibot_orchestration/: langchain_agent_node.py
robot_ws/src/omnibot_orchestration/omnibot_orchestration/agent/: prompt.py  react_agent.py
robot_ws/src/omnibot_orchestration/omnibot_orchestration/generation/: data_generator.py
robot_ws/src/omnibot_orchestration/omnibot_orchestration/graph/: mission_graph.py  nodes.py  state.py
robot_ws/src/omnibot_orchestration/omnibot_orchestration/memory/: entity_memory.py
robot_ws/src/omnibot_orchestration/omnibot_orchestration/planning/: crew_planner.py
robot_ws/src/omnibot_orchestration/omnibot_orchestration/tools/: human_tools.py  navigation_tools.py  query_tools.py  (+2 more)
robot_ws/src/omnibot_orchestration/test/: test_entity_memory.py  test_graph.py  test_tools.py
robot_ws/src/omnibot_rl/: package.xml  setup.py
robot_ws/src/omnibot_rl/config/: rl_arm_params.yaml  rl_nav_params.yaml
robot_ws/src/omnibot_rl/launch/: rl_inference.launch.py
robot_ws/src/omnibot_rl/omnibot_rl/: arm_cmd_mux.py  rl_arm_node.py  rl_nav_node.py  rl_object_pose_node.py
robot_ws/src/omnibot_vla/omnibot_vla/: vla_node.py
tools/: urdf_to_glb.py
(+46 files in other folders)
