<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>omnibot_bringup</name>
  <version>0.0.1</version>
  <description>Launch files for OmniBot mecanum wheel robot</description>
  <maintainer email="varunvaidhiya@todo.todo">varunvaidhiya</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>omnibot_description</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>xacro</exec_depend>
  <depend>rviz2</depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>teleop_twist_joy</exec_depend>

  <!-- Simulation -->
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>omnibot_arm</exec_depend>

  <!-- Digital twin extras (simulation.launch.py) -->
  <!-- /scan from Astra Pro depth (no physical lidar on OmniBot) -->
  <exec_depend>depthimage_to_laserscan</exec_depend>
  <!-- Browser visualisation — ws://localhost:8765 -->
  <exec_depend>foxglove_bridge</exec_depend>
  <!-- Android app / web WebSocket bridge — ws://localhost:9090 -->
  <exec_depend>rosbridge_server</exec_depend>

  <!-- <test_depend>ament_lint_auto</test_depend> -->
  <!-- <test_depend>ament_lint_common</test_depend> -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
