<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>omnibot_hybrid</name>
  <version>1.0.0</version>
  <description>Hybrid Nav2 + VLA control with cmd_vel mux and mission planner for OmniBot</description>
  <maintainer email="varunvaidhiya@todo.todo">varunvaidhiya</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>action_msgs</depend>

  <!-- <test_depend>ament_copyright</test_depend> -->
  <!-- <test_depend>ament_flake8</test_depend> -->
  <!-- <test_depend>ament_pep257</test_depend> -->
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
