<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>omnibot_navigation</name>
  <version>1.0.0</version>
  <description>Navigation configuration and launch files for OmniBot autonomous operation</description>
  <maintainer email="varun@example.com">Varun</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclpy</depend>
  <depend>nav2_bringup</depend>
  <depend>nav2_common</depend>
  <depend>nav2_util</depend>
  <depend>nav2_controller</depend>
  <depend>nav2_planner</depend>
  <depend>nav2_behaviors</depend>
  <depend>nav2_bt_navigator</depend>
  <depend>nav2_waypoint_follower</depend>
  <depend>nav2_velocity_smoother</depend>
  <depend>nav2_costmap_2d</depend>
  <depend>nav2_map_server</depend>
  <depend>nav2_amcl</depend>
  <depend>nav2_lifecycle_manager</depend>
  <depend>slam_toolbox</depend>
  <depend>robot_localization</depend>
  <depend>tf2_ros</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>

  <!-- 3-D mapping stack -->
  <depend>rtabmap_ros</depend>
  <depend>octomap_server</depend>
  <depend>pcl_ros</depend>
  <depend>depth_image_proc</depend>
  <depend>octomap_msgs</depend>

  <!-- <test_depend>ament_lint_auto</test_depend> -->
  <!-- <test_depend>ament_lint_common</test_depend> -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
