<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>omnibot_rl</name>
  <version>1.0.0</version>
  <description>
    Isaac Lab RL policy inference nodes for OmniBot sim-to-real deployment.
    Provides RL-based local navigation (obstacle avoidance) and arm control
    as additional modes alongside the existing Nav2 + SmolVLA hybrid stack.
  </description>
  <maintainer email="varunvaidhiya@todo.todo">varunvaidhiya</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>cv_bridge</depend>

  <!-- <test_depend>ament_copyright</test_depend> -->
  <!-- <test_depend>ament_flake8</test_depend> -->
  <!-- <test_depend>ament_pep257</test_depend> -->
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
